fixing text alignment

--- a/styles.css
+++ b/styles.css
@@ -385,7 +385,7 @@ path:hover{
     }
 
     .universalBodySpecial2{
-        text-align: justify;
+        text-align: left;
         margin-top: 30px;
         margin-bottom: 30px;
     }
